Re-uploading all files

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <img id="characterSprite" src="path_to_character_sprite.png" style="display:none;">
     <img id="coinSprite" src="path_to_coin_sprite.png" style="display:none;">
     <img id="enemySprite" src="path_to_enemy_sprite.png" style="display:none;">
-    <img id="decorationSprite" src="path_to_seamless_background.png" style="display:none;">
+    <img id="decorationSprite" src="path_to_seamless_background_1.jpg" style="display:none;">
     <img id="stumpSprite" src="path_to_stump_sprite.png" style="display:none;">
     <img id="gameOverSprite" src="path_to_game_over_sprite.png" style="display:none;">
+    <img id="shvabraSprite" src="path_to_shvabra_sprite.png" style="display:none;">
+    <img id="platformSprite" src="path_to_platform_sprite.png" style="display:none;">
+	<img id="lifeSprite" src="path_to_life_sprite.png" style="display:none;">
+	<img id="expSprite" src="path_to_exp_sprite.png" style="display:none;">
+	<img id="healthSprite" src="path_to_health_sprite.png" style="display:none;">
+	<img id="jumpingSprite" src="path_to_jumping_sprite.png" style="display:none;">
+
     <audio id="backgroundMusic" src="path_to_background_music.mp3" loop></audio>
     <audio id="jumpSound" src="path_to_jump_sound.mp3"></audio>
     <audio id="collisionSound" src="path_to_collision_sound.mp3"></audio>
